# SATySFi-md2latex

./: .gitignore  Makefile  README.md  Satyristes  satysfi-md2latex-doc.opam  satysfi-md2latex.opam
doc/: manual-ja.saty
src/md/: md2latex.satysfi-md
