opam-version: "2.0"
name: "satysfi-md2latex-doc"
version: "0.0.3"
synopsis: "Document of md2latex Package"
description: """
Document of md2latex Package.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-md2latex"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-md2latex.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-md2latex/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.10" & < "0.0.3" }
  "satysfi-dist"
  "satysfi-md2latex" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "md2latex-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "md2latex-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]