opam-version: "2.0"
name: "satysfi-md2latex"
version: "0.0.1"
synopsis: "Convert Markdown to LaTeX with SATySFi"
description: """
Convert Markdown to LaTeX with SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-md2latex"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-md2latex.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-md2latex/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-dist"
  "satysfi-make-latex" {>= "0.2.0" & < "0.3.0"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "md2latex"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
